-issue#736: Sequence numbers not visible when editing templates using modern theme
-issue#739: Graph Titles missing on aggregate graphs
-issue#740: Spacer manipulation broken after update to responsive forms
-issue#741: Errors in dsstats with very large RRDfiles with more than 60 data sources
-issue#748: Search results are not cleared on Aggregates
-issue: Hide Aggregate system cdefs when editing graphs and graph templates
-feature#723: Convert Data Source dropdown to autocomplete when editing standalone graphs
-feature#735: Allow color selection in graphs and templates to be autocomplete
-feature#753: Preliminary support for RRDtool 1.7.
-feature: Add function to obtain the current execution user
-feature: Implement Site timezones as autocomplete for performance
-feature: For themes other than classic, make color id selection autocomplete

1.1.7
-issue#470: Enhance Cacti's SNMP function and Data Query XML, add <output_format>hex|string|guess</output_format>
-issue#653: Devices with empty sysNames are not added to discovered devices
-issue#655: Data source not displaying device name
-issue#658: Scheduled Reports (type "tree") not working
-issue#662: Sending test Email should optionally bypass ping
-issue#667: In Classic theme initial view of Tree view broken
-issue#669: Invalid SQL Messages when upgrading to Cacti 1.0.5
-issue#670: Validation error when you do "Change Graph Template" in Cacti
-issue#672: Cacti unable to enable snmp notification receiver mibs
-issue#680: Sort order in Time Graph View
-issue#687: Cacti DB access not compatible with PHP 7
-issue#696: Multiple issues with snmpagent notification UI
-issue#699: Add custom error handler for ping functions
-issue#704: Fix GUI issues for Graphs not belonging to a device
-issue#707: Back button not working
-issue#708: Issues finding lib/snmp.php in host disk functions
-issue#712: Change Graph Template dropdown invalid
-issue#717: Allow ajax callbacks when adding non-templated graph items