@@ -700,9 +700,9 @@ $settings = array(
 			),
 		'graph_watermark' => array(
 			'friendly_name' => __('Watermark Text'),
-			'description' => __('Test to place at the bottom center of every Graph.'),
+			'description' => __('Text placed at the bottom center of every Graph.'),
 			'method' => 'textbox',
-			'default' => COPYRIGHT_YEARS,
+			'default' => 'Generated by Cacti®',
 			'max_length' => '80',
 			'size' => '60'
 			),
